--- a/html_example.html
+++ b/html_example.html
@@ -2,16 +2,23 @@
 <html>
   <head>
     <title>Example html page</title>
+    <style>
+      h1 { color: red; }
+      p { background-color: #839302; }
+      div#lists { background-color: yellow; }
+      .special {color: pink;}
+
+    </style>
 
   </head>
 
   <body>
-    <h1>Example html page (this is an h1 heading)</h1>
+    <h1 class="special">Example html page (this is an h1 heading)</h1>
 
     <h2>Headings and paragraphs (this is an h2 heading)</h2>
     <h3>This is an h3 heading</h3>
 
-    <p>This is some paragraph text</p>
+    <p class="special">This is some paragraph text</p>
     <p>This is another paragraph</p>
 
     <!--- This is a comment. It won't show up in the page, but you will
