--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class='container'>
-    <h1 class="special">Example html page (this is an h1 heading)</h1>
+    <h1 class="special">Tom's page</h1>
 
     <h2>Headings and paragraphs (this is an h2 heading)</h2>
     <h3>This is an h3 heading</h3>
